--- a/public/styles/nav.css
+++ b/public/styles/nav.css
@@ -1,4 +1,34 @@
 
 nav {
+  display: flex;
   font-family: 'Bungee', sans-serif;
+  font-family: 'Bungee', sans-serif;
+  height: 120px;
+  background-color: #4056A1;
+  color: #FFFFFF;
+  padding-left: 1.5em;
+  padding-right: 1.5em;
+  justify-content: space-between;
+  position: fixed; 
+  top: 0; 
+  width: 100%; 
+}
+
+span.nav-title {
+  display: flex;
+  font-size: 60px;
+  align-items: center;
+  justify-content: center;
+}
+
+div.nav-right {
+  font-family: 'Source Sans Pro', sans-serif;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  justify-content: center;
+}
+
+i.fa-solid {
+  color: red;
 }
