--- a/public/styles/header.css
+++ b/public/styles/header.css
@@ -1,7 +1,11 @@
-
 header {
   font-family: 'Source Sans Pro', sans-serif;
   display: flex;
   height: 400px;
-  margin-top: 120px;
+  background-color: orange;
+  background-image: url("https://www.transparenttextures.com/patterns/mbossed.png");
+  padding-left: 1.5em;
+  padding-right: 1.5em;
+  flex-direction: column;
+  align-items: center;
 }
