--- a/public/styles/nav.css
+++ b/public/styles/nav.css
@@ -9,7 +9,7 @@ nav {
   padding-left: 1.5em;
   padding-right: 1.5em;
   justify-content: space-between;
-  position: fixed; 
+  position: static;
   top: 0; 
   width: 100%; 
 }
