Fix header background image

--- a/public/styles/header.css
+++ b/public/styles/header.css
@@ -3,7 +3,7 @@ header {
   display: flex;
   height: 400px;
   background-color: orange;
-  background-image: url("https://www.transparenttextures.com/patterns/mbossed.png");
+  background-image: url("https://www.transparenttextures.com/patterns/45-degree-fabric-light.png");
   padding-left: 1.5em;
   padding-right: 1.5em;
   flex-direction: column;
