--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -24,3 +24,13 @@ body {
 /*
  * Additional CSS can be defined below or in other CSS files, as per instructions
  */
+
+ main {
+  display: flex;
+  background-color: #f4f1ec;
+  font-family: 'Source Sans Pro', sans-serif;
+  width: 90%;
+  margin: 0 auto;
+  justify-content: center;
+  flex-direction: column;
+}
