--- a/public/styles/nav.css
+++ b/public/styles/nav.css
@@ -9,9 +9,9 @@ nav {
   padding-left: 1.5em;
   padding-right: 1.5em;
   justify-content: space-between;
-  position: static;
+  position: fixed; 
   top: 0; 
-  width: 100%; 
+  width: 100%;
 }
 
 span.nav-title {
