Add error validation styles + jquery

--- a/public/styles/new-tweet.css
+++ b/public/styles/new-tweet.css
@@ -22,6 +22,10 @@ button {
     padding: 10px;
 }
 
+button:hover {
+  background-color: orange;
+}
+
 .counter {
   font-family: 'Bungee', sans-serif;
   padding: 5;
