--- a/public/styles/errors.css
+++ b/public/styles/errors.css
@@ -1,5 +1,5 @@
-.validation-error1,
-.validation-error2 {
+.too-many-chars,
+.empty-form {
   display: flex;
   border: 4px solid red;
   color: red;
