--- a/public/styles/header.css
+++ b/public/styles/header.css
@@ -1,5 +1,4 @@
 header.main {
-  font-family: 'Source Sans Pro', sans-serif;
   display: flex;
   height: 400px;
   margin-top: 120px;
@@ -9,4 +8,10 @@ header.main {
   padding-right: 1.5em;
   flex-direction: column;
   align-items: center;
+}
+
+.username {
+  font-family: 'Source Sans Pro', sans-serif;
+  font-size: 40px;
+  color: white;
 }
