--- a/public/styles/header.css
+++ b/public/styles/header.css
@@ -1,3 +1,5 @@
+/* Mobile Styles */
+
 header.main {
   display: flex;
   height: 400px;
@@ -15,3 +17,4 @@ header.main {
   font-size: 40px;
   color: white;
 }
+
