--- a/public/styles/new-tweet.css
+++ b/public/styles/new-tweet.css
@@ -48,3 +48,16 @@ button:hover {
 label {
   color: darkslategrey;
 }
+
+/* Desktop Styles */
+@media only screen and (min-width: 1024px) {
+
+  .new-tweet {
+    display: flex;
+    flex-direction: column;
+    min-width: 100%;
+    padding-top: 60px;
+    align-content: flex-start;
+    background-color: orange;
+  }
+}
