--- a/public/styles/tweets.css
+++ b/public/styles/tweets.css
@@ -109,3 +109,23 @@ footer {
   display: none;
   }
 }
+
+/* Desktop Styles */
+@media only screen and (min-width: 1024px) {
+
+  article {
+    display: flex;
+    flex-direction: column;
+    align-content: flex-start;
+    font-family: 'Source Sans Pro', sans-serif;
+    background-color: violet;
+  }
+
+  header.main {
+    margin-top: 180px;
+    margin-left: 60px;
+    width: 33.3%;
+    float: left;
+    justify-content: center;
+  }
+}
