--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -26,22 +26,31 @@ body {
  * Additional CSS can be defined below or in other CSS files, as per instructions
  */
 
-/* Mobile Styles */
  main {
   display: flex;
   background-color: #f4f1ec;
   font-family: 'Source Sans Pro', sans-serif;
-  width: 90%;
   margin: 0 auto;
   justify-content: center;
   flex-direction: column;
 }
 
-/* Desktop Styles */
+/* Mobile & Tablet Styles */
+@media only screen and (max-width: 1023px) {
+  main {
+    display: flex;
+    width: 90%;
+  }
+}
 
+/* Desktop Styles */
 @media only screen and (min-width: 1024px) {
   .page-content {
     display: flex;
     flex-direction: row;
   };
+  
+  main {
+    width: 35%;
+  }
 }
