--- a/public/styles/new-tweet.css
+++ b/public/styles/new-tweet.css
@@ -1,10 +1,8 @@
 .new-tweet {
   display: flex;
   flex-direction: column;
-  min-width: 100%;
   padding-top: 60px;
   align-content: flex-start;
-  /* font-family: 'Source Sans Pro', sans-serif; */
 }
 
 textarea {
@@ -49,15 +47,24 @@ label {
   color: darkslategrey;
 }
 
+/* Mobile & Tablet Styles */
+@media only screen and (max-width: 1023px) {
+  main {
+    display: flex;
+    min-width: 100%;
+    padding: 40px;
+  }
+}
+
 /* Desktop Styles */
 @media only screen and (min-width: 1024px) {
-
   .new-tweet {
     display: flex;
+    padding: 0px;
+    margin-left: 60px;
+    margin-right: 60px;
+    margin-top: 180px;
     flex-direction: column;
-    min-width: 100%;
-    padding-top: 60px;
     align-content: flex-start;
-    background-color: orange;
   }
 }
